--- a/.github/workflows/testPush.yml
+++ b/.github/workflows/testPush.yml
@@ -3,6 +3,9 @@ name: Push Gihub-Pages
 on:
     push:
         branches: test
+    pull_request:
+        branches: 
+         - 'master'
 
 jobs:
     storybook-pie-docs-build-and-deploy:
