--- a/.github/workflows/testPush.yml
+++ b/.github/workflows/testPush.yml
@@ -22,6 +22,4 @@ jobs:
                   git config user.email "hello@ghbot.com"
                   git add .
                   git commit -m "Deploy Storybook and pie-docs to Github Pages"
-                  git push --force --quiet https://oss.fin.navercorp.com/soohyeon-lee/test main:test-github-pages
-              env: 
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  git push --force --quiet https://github.com/hipppoSHL/movie_app main:test-github-pages
