--- a/.github/workflows/testPush.yml
+++ b/.github/workflows/testPush.yml
@@ -22,4 +22,4 @@ jobs:
                   git config user.email "hello@ghbot.com"
                   git add .
                   git commit -m "Deploy Storybook and pie-docs to Github Pages"
-                  git push --force --quiet git@oss.fin.navercorp.com:soohyeon-lee/test.git main:test-github-pages
+                  git push --force --quiet git@github.com:hipppoSHL/movie_app.git main:test-github-pages
